--- a/infor_page/index.html
+++ b/infor_page/index.html
@@ -41,7 +41,7 @@
               <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="/img_and_fonts/image/hill_and_fount.png" class="d-block" alt="...">
+                    <img src="./img_and_fonts/image/hill_and_fount.png" class="d-block" alt="...">
                   </div>
                   <div class="carousel-item">
                     <img src="./img_and_fonts/image/man_sit_on_the_top.png" class="d-block" alt="...">
@@ -106,8 +106,51 @@
       </div>
     </div>
     <div class="section_3">
-      <div class="col-right"></div>
-      <div class="col-left"></div>
+      <div class="container-fluid container-sec-3">
+        <div class="row row-sec-3">
+          <div class="col-sm-12 col-md-8 col-lg-8 col-xl-8 col-left-sec-3">
+            <div class="heading-sec-3">
+              <h2>Lorem ipsum dolor <br> sit amet consectetur</h2>
+            </div>
+            <div class="menu-option-sec-3">
+              <div class="line-row">
+                <img class="line-space" src="./img_and_fonts/image/Rectangle.png" alt="">
+              </div>
+              <div class="container-content-col-left-sec-3">
+                <p>Lorem ipsum dolor, sit amet consectetur adipi sicing elit, sed do ei usmod</p>
+                <img class="plus" src="./img_and_fonts/image/plus.png" alt="">
+              </div>
+              <div class="line-row">
+                <img class="line-space" src="./img_and_fonts/image/Rectangle.png" alt="">
+              </div>
+              <div class="container-content-col-left-sec-3">
+                <p>Lorem ipsum dolor, sit amet consectetur adipi sicing elit, sed do ei usmod</p>
+                <img class="plus" src="./img_and_fonts/image/plus.png" alt="">
+              </div>
+              <div class="line-row">
+                <img class="line-space" src="./img_and_fonts/image/Rectangle.png" alt="">
+              </div>
+              <div class="container-content-col-left-sec-3">
+                <p>Lorem ipsum dolor, sit amet consectetur adipi sicing elit, sed do ei usmod</p>
+                <img class="plus" src="./img_and_fonts/image/plus.png" alt="">
+              </div>
+              <div class="line-row">
+                <img class="line-space" src="./img_and_fonts/image/Rectangle.png" alt="">
+              </div>
+              <div class="container-content-col-left-sec-3">
+                <p>Lorem ipsum dolor, sit amet consectetur adipi sicing elit, sed do ei usmod</p>
+                <img class="plus" src="./img_and_fonts/image/plus.png" alt="">
+              </div>
+              <div class="line-row">
+                <img class="line-space" src="./img_and_fonts/image/Rectangle.png" alt="">
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4 col-right-sec-3">
+            <img src="./img_and_fonts/image/man_sit_on_the_top.png" alt="">
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </body>
