--- a/child-page/index.html
+++ b/child-page/index.html
@@ -16,29 +16,29 @@
 <body>
     <div class="container">
         <header>
-            <img class="iP" src="/img/header-iPhone.png" alt="">
-            <ul class="nav justify-content-end">
-                <li class="nav-item">
-                <a class="nav-link" href="#">HOME</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="#">MENU</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="#">OUR STORY</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="#">CONTACT US</a>
-                </li>
-            </ul>
-            <ul class="nav flex-column">
-                <li class="nav-item">
-                <a class="nav-link disabled">EXPRESS DELIVERY</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="#">1800 258 888</a>
-                </li>
-            </ul>
+                <img class="iP" src="./img/header-iPhone.png" alt="">
+                <ul class="nav justify-content-end">
+                    <li class="nav-item">
+                    <a class="nav-link" href="#">HOME</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="#">MENU</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="#">OUR STORY</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="#">CONTACT US</a>
+                    </li>
+                </ul>
+                <ul class="nav flex-column">
+                    <li class="nav-item">
+                    <a class="nav-link disabled">EXPRESS DELIVERY</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="#">1800 258 888</a>
+                    </li>
+                </ul>
         </header>
         <main>
             <input type="checkbox" name="" class="nav-check" id="nav-input">
@@ -226,6 +226,28 @@
                             </div>
                         </div>
                     </div>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga nam doloribus nostrum voluptas pariatur ut. Magni aliquid cum asperiores sit dolorem atque aperiam facilis ex cupiditate tenetur? Praesentium, temporibus distinctio!
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga nam doloribus nostrum voluptas pariatur ut. Magni aliquid cum asperiores sit dolorem atque aperiam facilis ex cupiditate tenetur? Praesentium, temporibus distinctio!
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga nam doloribus nostrum voluptas pariatur ut. Magni aliquid cum asperiores sit dolorem atque aperiam facilis ex cupiditate tenetur? Praesentium, temporibus distinctio!
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga nam doloribus nostrum voluptas pariatur ut. Magni aliquid cum asperiores sit dolorem atque aperiam facilis ex cupiditate tenetur? Praesentium, temporibus distinctio!
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga nam doloribus nostrum voluptas pariatur ut. Magni aliquid cum asperiores sit dolorem atque aperiam facilis ex cupiditate tenetur? Praesentium, temporibus distinctio!
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga nam doloribus nostrum voluptas pariatur ut. Magni aliquid cum asperiores sit dolorem atque aperiam facilis ex cupiditate tenetur? Praesentium, temporibus distinctio!
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga nam doloribus nostrum voluptas pariatur ut. Magni aliquid cum asperiores sit dolorem atque aperiam facilis ex cupiditate tenetur? Praesentium, temporibus distinctio!
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga nam doloribus nostrum voluptas pariatur ut. Magni aliquid cum asperiores sit dolorem atque aperiam facilis ex cupiditate tenetur? Praesentium, temporibus distinctio!
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga nam doloribus nostrum voluptas pariatur ut. Magni aliquid cum asperiores sit dolorem atque aperiam facilis ex cupiditate tenetur? Praesentium, temporibus distinctio!
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga nam doloribus nostrum voluptas pariatur ut. Magni aliquid cum asperiores sit dolorem atque aperiam facilis ex cupiditate tenetur? Praesentium, temporibus distinctio!
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga nam doloribus nostrum voluptas pariatur ut. Magni aliquid cum asperiores sit dolorem atque aperiam facilis ex cupiditate tenetur? Praesentium, temporibus distinctio!
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga nam doloribus nostrum voluptas pariatur ut. Magni aliquid cum asperiores sit dolorem atque aperiam facilis ex cupiditate tenetur? Praesentium, temporibus distinctio!
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga nam doloribus nostrum voluptas pariatur ut. Magni aliquid cum asperiores sit dolorem atque aperiam facilis ex cupiditate tenetur? Praesentium, temporibus distinctio!
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga nam doloribus nostrum voluptas pariatur ut. Magni aliquid cum asperiores sit dolorem atque aperiam facilis ex cupiditate tenetur? Praesentium, temporibus distinctio!
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga nam doloribus nostrum voluptas pariatur ut. Magni aliquid cum asperiores sit dolorem atque aperiam facilis ex cupiditate tenetur? Praesentium, temporibus distinctio!
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga nam doloribus nostrum voluptas pariatur ut. Magni aliquid cum asperiores sit dolorem atque aperiam facilis ex cupiditate tenetur? Praesentium, temporibus distinctio!
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga nam doloribus nostrum voluptas pariatur ut. Magni aliquid cum asperiores sit dolorem atque aperiam facilis ex cupiditate tenetur? Praesentium, temporibus distinctio!
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga nam doloribus nostrum voluptas pariatur ut. Magni aliquid cum asperiores sit dolorem atque aperiam facilis ex cupiditate tenetur? Praesentium, temporibus distinctio!
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga nam doloribus nostrum voluptas pariatur ut. Magni aliquid cum asperiores sit dolorem atque aperiam facilis ex cupiditate tenetur? Praesentium, temporibus distinctio!
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga nam doloribus nostrum voluptas pariatur ut. Magni aliquid cum asperiores sit dolorem atque aperiam facilis ex cupiditate tenetur? Praesentium, temporibus distinctio!
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga nam doloribus nostrum voluptas pariatur ut. Magni aliquid cum asperiores sit dolorem atque aperiam facilis ex cupiditate tenetur? Praesentium, temporibus distinctio!
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga nam doloribus nostrum voluptas pariatur ut. Magni aliquid cum asperiores sit dolorem atque aperiam facilis ex cupiditate tenetur? Praesentium, temporibus distinctio!
                 </div>
             </div>
         </main>
