--- a/infor_page/index.html
+++ b/infor_page/index.html
@@ -21,7 +21,7 @@
     <div class="section_1 d-flex flex-column align-items-center">
       <div class="title-heading d-flex flex-column align-items-center text-center">
         <img class="airplane_icon" src="./img_and_fonts/image/airplane_icon.png" alt="">
-        <h1>See places you've </h1> <h1>never been before</h1>
+        <h1>See places you've <br> <i><a href="">never</a></i> been before</h1>
         <h6>Lorem Ipsum Dolor | Lorem Ipsum Dolor | Lorem Ipsum Dolor</h6>
       </div>
       <div class="pen-write d-flex justify-content-start align-items-center">
@@ -108,7 +108,7 @@
     <div class="section_3">
       <div class="container-fluid container-sec-3">
         <div class="row row-sec-3">
-          <div class="col-sm-12 col-md-8 col-lg-8 col-xl-8 col-left-sec-3">
+          <div class="col-12 col-sm-12 col-md-8 col-lg-8 col-xl-8 col-left-sec-3">
             <div class="heading-sec-3">
               <h2>Lorem ipsum dolor <br> sit amet consectetur</h2>
             </div>
@@ -146,7 +146,7 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4 col-right-sec-3">
+          <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 col-right-sec-3">
             <img src="./img_and_fonts/image/man_sit_on_the_top.png" alt="">
           </div>
         </div>
