--- a/html/index.html
+++ b/html/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-  <link rel="stylesheet" href="./css/all.min.css">
-  <link rel="stylesheet" href="./css/infor_page.css">
+  <link rel="stylesheet" href="/infor_page/css/all.min.css">
+  <link rel="stylesheet" href="/infor_page/css/infor_page.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cardo:wght@700&display=swap" rel="stylesheet">
@@ -20,18 +20,18 @@
   <div class="main">
     <div class="section_1 d-flex flex-column align-items-center">
       <div class="title-heading d-flex flex-column align-items-center text-center">
-        <img class="airplane_icon" src="./img_and_fonts/image/airplane_icon.png" alt="">
+        <img class="airplane_icon" src="/infor_page/img_and_fonts/image/airplane_icon.png" alt="">
         <h1>See places you've <br> <i><a href="">never</a></i> been before</h1>
         <h6>Lorem Ipsum Dolor | Lorem Ipsum Dolor | Lorem Ipsum Dolor</h6>
       </div>
       <div class="pen-write d-flex justify-content-start align-items-center">
-        <img class="pen-note" src="./img_and_fonts/image/Vector_Smart _Object1.png" alt="">
+        <img class="pen-note" src="/infor_page/img_and_fonts/image/Vector_Smart _Object1.png" alt="">
       </div>
       <div class="container-fluid">
         <div class="row banner-sec-1 d-flex justify-content-center">
 
           <div class="col-lg-6 col-xl-6 col-left d-flex justify-content-center">
-            <img class="hill-and-fount img-fluid" src="./img_and_fonts/image/hill_and_fount.png" alt="">
+            <img class="hill-and-fount img-fluid" src="/infor_page/img_and_fonts/image/hill_and_fount.png" alt="">
           </div>
 
           <div class="col-lg-6 col-xl-6 col-right d-flex flex-column justify-content-start">
@@ -41,13 +41,13 @@
               <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="./img_and_fonts/image/hill_and_fount.png" class="d-block" alt="...">
+                    <img src="/infor_page/img_and_fonts/image/hill_and_fount.png" class="d-block" alt="...">
                   </div>
                   <div class="carousel-item">
-                    <img src="./img_and_fonts/image/man_sit_on_the_top.png" class="d-block" alt="...">
+                    <img src="/infor_page/img_and_fonts/image/man_sit_on_the_top.png" class="d-block" alt="...">
                   </div>
                   <div class="carousel-item">
-                    <img src="./img_and_fonts/image/mountain.png" class="d-block" alt="...">
+                    <img src="/infor_page/img_and_fonts/image/mountain.png" class="d-block" alt="...">
                   </div>
                 </div>
               </div>
@@ -96,13 +96,13 @@
           </div>
           <div class="col-sm-12 col-md-6 col-lg-7 col-xl-7 col-right-sec-2">
             <div class="man-stand-on-the-top d-flex justify-content-end">
-              <img src="./img_and_fonts/image/peak_conquest.png" alt="">
+              <img src="/infor_page/img_and_fonts/image/peak_conquest.png" alt="">
             </div>
           </div>
         </div>
       </div>
       <div class="scribble-light">
-        <img src="./img_and_fonts/image/Scribble_Light.png" alt="">
+        <img src="/infor_page/img_and_fonts/image/Scribble_Light.png" alt="">
       </div>
     </div>
     <div class="section_3">
@@ -114,40 +114,40 @@
             </div>
             <div class="menu-option-sec-3">
               <div class="line-row">
-                <img class="line-space" src="./img_and_fonts/image/Rectangle.png" alt="">
+                <img class="line-space" src="/infor_page/img_and_fonts/image/Rectangle.png" alt="">
               </div>
               <div class="container-content-col-left-sec-3">
                 <p>Lorem ipsum dolor, sit amet consectetur adipi sicing elit, sed do ei usmod</p>
-                <img class="plus" src="./img_and_fonts/image/plus.png" alt="">
+                <img class="plus" src="/infor_page/img_and_fonts/image/plus.png" alt="">
               </div>
               <div class="line-row">
-                <img class="line-space" src="./img_and_fonts/image/Rectangle.png" alt="">
+                <img class="line-space" src="/infor_page/img_and_fonts/image/Rectangle.png" alt="">
               </div>
               <div class="container-content-col-left-sec-3">
                 <p>Lorem ipsum dolor, sit amet consectetur adipi sicing elit, sed do ei usmod</p>
-                <img class="plus" src="./img_and_fonts/image/plus.png" alt="">
+                <img class="plus" src="/infor_page/img_and_fonts/image/plus.png" alt="">
               </div>
               <div class="line-row">
-                <img class="line-space" src="./img_and_fonts/image/Rectangle.png" alt="">
+                <img class="line-space" src="/infor_page/img_and_fonts/image/Rectangle.png" alt="">
               </div>
               <div class="container-content-col-left-sec-3">
                 <p>Lorem ipsum dolor, sit amet consectetur adipi sicing elit, sed do ei usmod</p>
-                <img class="plus" src="./img_and_fonts/image/plus.png" alt="">
+                <img class="plus" src="/infor_page/img_and_fonts/image/plus.png" alt="">
               </div>
               <div class="line-row">
-                <img class="line-space" src="./img_and_fonts/image/Rectangle.png" alt="">
+                <img class="line-space" src="/infor_page/img_and_fonts/image/Rectangle.png" alt="">
               </div>
               <div class="container-content-col-left-sec-3">
                 <p>Lorem ipsum dolor, sit amet consectetur adipi sicing elit, sed do ei usmod</p>
-                <img class="plus" src="./img_and_fonts/image/plus.png" alt="">
+                <img class="plus" src="/infor_page/img_and_fonts/image/plus.png" alt="">
               </div>
               <div class="line-row">
-                <img class="line-space" src="./img_and_fonts/image/Rectangle.png" alt="">
+                <img class="line-space" src="/infor_page/img_and_fonts/image/Rectangle.png" alt="">
               </div>
             </div>
           </div>
           <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 col-right-sec-3">
-            <img src="./img_and_fonts/image/man_sit_on_the_top.png" alt="">
+            <img src="/infor_page/img_and_fonts/image/man_sit_on_the_top.png" alt="">
           </div>
         </div>
       </div>
