--- a/html/index.html
+++ b/html/index.html
@@ -14,6 +14,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/181f9f94a9.js" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
   <title>Document</title>
 </head>
 <body>
@@ -41,33 +42,76 @@
               <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="/infor_page/img_and_fonts/image/hill_and_fount.png" class="d-block" alt="...">
+                    <div class="image-slider">
+                      <img src="/infor_page/img_and_fonts/image/hill_and_fount.png" class="d-block" alt="...">
+                    </div>
+                    <div class="container-fluid title-desc">
+                      <div class="row desc-banner-sec-1 d-flex">
+                        <div class="col-sm-6 heading-col-right-sec-1">
+                          <h3>Lorem ipsum <br> dolor sit amet <br> consectetur <br> adipisicing elit <br> sed do ei</h3>
+                        </div>
+                        <div class="col-sm-6 text-desc-slide-1 text-desc-sec-1">
+                             <p>Lorem ipsum dolor sit amet, consectetur adip isicing elit, sed do eiusmod tempor incididunt 
+                              ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud. <br><br> exercitation ullamco laboris
+                              nisi ut aliquip ex  ea commodo consequat. Duis aute irure dolor din reprehenderit in voluptate velit esse
+                              cillum dolor eu fugiat nulla pariatur</p>
+                        </div>
+                      </div>
+                      <div class="btn-next">
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Next</span>
+                        </button>
+                      </div>
+                    </div> 
                   </div>
                   <div class="carousel-item">
-                    <img src="/infor_page/img_and_fonts/image/man_sit_on_the_top.png" class="d-block" alt="...">
+                    <div class="image-slider">
+                      <img src="/infor_page/img_and_fonts/image/man_sit_on_the_top.png" class="d-block" alt="...">
+                    </div>
+                    <div class="container-fluid title-desc">
+                      <div class="row desc-banner-sec-1 d-flex">
+                        <div class="col-sm-6 heading-col-right-sec-1">
+                          <h3>Lorem ipsum <br> dolor sit amet <br> consectetur <br> adipisicing elit <br> sed do ei</h3>
+                        </div>
+                        <div class="col-sm-6 text-desc-slide-2 text-desc-sec-1">
+                             <p>Apple's iPhone 14 Pro is set to be the phone that could shake up the iPhone range by potentially <br> bringing in a notably different design from the iPhone 13 Pro. So far the rumors have hinted at everything from <br> the death of the notch to the return of Touch ID.  </p>
+                        </div>
+                      </div>
+                      <div class="btn-next">
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Next</span>
+                        </button> 
+                      </div>
+                    </div> 
                   </div>
                   <div class="carousel-item">
-                    <img src="/infor_page/img_and_fonts/image/mountain.png" class="d-block" alt="...">
+                    <div class="image-slider">
+                      <img src="/infor_page/img_and_fonts/image/mountain.png" class="d-block" alt="...">
+                    </div>
+                    <div class="container-fluid title-desc">
+                      <div class="row desc-banner-sec-1 d-flex">
+                        <div class="col-sm-6 heading-col-right-sec-1">
+                          <h3>Lorem ipsum <br> dolor sit amet <br> consectetur <br> adipisicing elit <br> sed do ei</h3>
+                        </div>
+                        <div class="col-sm-6 text-desc-slide-3 text-desc-sec-1">
+                             <p>Overall, the internal design of the new MacBook Air looks similar to the previous model, 
+                              but the flatter shell allowed for Apple to fit larger battery cells inside the notebook. <br>
+                              <br>The new MacBook Air is equipped with a 52.6-watt-hour battery, 
+                              compared to a 49.9-watt-hour battery in the previous model, according to Apple's tech specs.</p>
+                        </div>
+                      </div>
+                      <div class="btn-next">
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Next</span>
+                        </button> 
+                      </div>
+                    </div> 
                   </div>
                 </div>
-              </div>
-              <div class="container-fluid title-desc">
-                <div class="row desc-banner-sec-1 d-flex">
-                  <div class="col-sm-6 heading-col-right-sec-1">
-                    <h3>Lorem ipsum <br> dolor sit amet <br> consectetur <br> adipisicing elit <br> sed do ei</h3>
-                  </div>
-                  <div class="col-sm-6 text-desc-sec-1">
-                       <p>Lorem ipsum dolor sit amet, consectetur adip isicing elit, sed do eiusmod tempor incididunt 
-                        ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud. <br><br> exercitation ullamco laboris
-                        nisi ut aliquip ex  ea commodo consequat. Duis aute irure dolor din reprehenderit in voluptate velit esse
-                        cillum dolor eu fugiat nulla pariatur</p>
-                  </div>
-                  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                  </button> 
-                </div>
-              </div>      
+              </div>    
           </div>
         </div> 
       </div>
@@ -117,29 +161,69 @@
                 <img class="line-space" src="/infor_page/img_and_fonts/image/Rectangle.png" alt="">
               </div>
               <div class="container-content-col-left-sec-3">
-                <p>Lorem ipsum dolor, sit amet consectetur adipi sicing elit, sed do ei usmod</p>
-                <img class="plus" src="/infor_page/img_and_fonts/image/plus.png" alt="">
+                <div class="title-desc-3-and-plus">
+                  <div class="text-title-sec-3">
+                    <p>Lorem ipsum dolor, sit amet consectetur adipi sicing elit, sed do ei usmod</p>
+                  </div>
+                  <button class="btn-1-plus btn-dropdown">
+                  </button>
+                </div>
+                <div class="dropdown-container-one dropdown-container">
+                  <p class="paragraph-one" style="display: none">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                </div>
               </div>
               <div class="line-row">
                 <img class="line-space" src="/infor_page/img_and_fonts/image/Rectangle.png" alt="">
               </div>
               <div class="container-content-col-left-sec-3">
-                <p>Lorem ipsum dolor, sit amet consectetur adipi sicing elit, sed do ei usmod</p>
-                <img class="plus" src="/infor_page/img_and_fonts/image/plus.png" alt="">
+                <div class="title-desc-3-and-plus">
+                  <div class="text-title-sec-3">
+                    <p>Lorem ipsum dolor, sit amet consectetur adipi sicing elit, sed do ei usmod</p>
+                  </div>
+                  <button class="btn-2-plus btn-dropdown">
+                  </button>
+                </div>
+                <div class="dropdown-container-two dropdown-container">
+                  <p class="paragraph-two" style="display: none">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                </div>
               </div>
               <div class="line-row">
                 <img class="line-space" src="/infor_page/img_and_fonts/image/Rectangle.png" alt="">
               </div>
               <div class="container-content-col-left-sec-3">
-                <p>Lorem ipsum dolor, sit amet consectetur adipi sicing elit, sed do ei usmod</p>
-                <img class="plus" src="/infor_page/img_and_fonts/image/plus.png" alt="">
+                <div class="title-desc-3-and-plus">
+                  <div class="text-title-sec-3">
+                    <p>Lorem ipsum dolor, sit amet consectetur adipi sicing elit, sed do ei usmod</p>
+                  </div>
+                  <button class="btn-3-plus btn-dropdown">
+                  </button>
+                </div>
+                <div class="dropdown-container-three dropdown-container">
+                  <p class="paragraph-three" style="display: none">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                </div>
               </div>
               <div class="line-row">
                 <img class="line-space" src="/infor_page/img_and_fonts/image/Rectangle.png" alt="">
               </div>
               <div class="container-content-col-left-sec-3">
-                <p>Lorem ipsum dolor, sit amet consectetur adipi sicing elit, sed do ei usmod</p>
-                <img class="plus" src="/infor_page/img_and_fonts/image/plus.png" alt="">
+                <div class="title-desc-3-and-plus">
+                  <div class="text-title-sec-3">
+                    <p>Lorem ipsum dolor, sit amet consectetur adipi sicing elit, sed do ei usmod</p>
+                  </div>
+                  <button class="btn-4-plus btn-dropdown">
+                  </button>
+                </div>
+                <div class="dropdown-container-four dropdown-container">
+                  <p class="paragraph-four" style="display: none">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                </div>
               </div>
               <div class="line-row">
                 <img class="line-space" src="/infor_page/img_and_fonts/image/Rectangle.png" alt="">
@@ -153,5 +237,21 @@
       </div>
     </div>
   </div>
+  <script src="/js/infor_page.js"></script>
+  <script>
+    var flip = 0, flip_2 = 0, flip_3 = 0, flip_4 = 0;
+    $( '.btn-1-plus' ).click(function() {
+      $( '.paragraph-one').toggle(flip++ % 2 === 0);
+    });
+    $( '.btn-2-plus' ).click(function() {
+      $( '.paragraph-two').toggle(flip_2++ % 2 === 0);
+    });
+    $( '.btn-3-plus' ).click(function() {
+      $( '.paragraph-three').toggle(flip_3++ % 2 === 0);
+    });
+    $( '.btn-4-plus' ).click(function() {
+      $( '.paragraph-four').toggle(flip_4++ % 2 === 0);
+    });
+    </script>
 </body>
 </html>
