--- a/baitap2/index.html
+++ b/baitap2/index.html
@@ -6,17 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/home.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="
+    sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
-    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
-    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <link href='https://fonts.googleapis.com/css?family=Fredericka the Great' rel='stylesheet'>
+    <link href="https://fonts.googleapis.com/css2?family=Cardo:wght@400;700&family=Gabriela&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/home.css">
 </head>
 
 <body>
-    <div class="wrap">
-        <header class="header">
+        <header class="header py-5">
             <div class="headerItem"> 
                 <img class="hdItem1" src="img/hd2.png" width="40%" height="100%%;">
                 <img class="hdItem2" src="img/hd3.png" width="100%">
@@ -44,11 +44,13 @@
                 </button>
                 <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
                     <div class="offcanvas-header">
-                        <h5 id="offcanvasRightLabel">ODER</h5>
+                        <h3 id="offcanvasRightLabel">MENU</h3>
                         <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                     </div>
                     <div class="offcanvas-body">
-                        ...
+                        <div class="mobiItem m-5"><i class="fas fa-home"><a href="#">HOME</a></i></div>
+                        <div class="mobiItem m-5"><i class="fas fa-bell"><a href="#">ODER</a></i></div>
+                        <div class="mobiItem m-5"><i class="fas fa-phone-square-alt"><a href="#">1800 258 888</a></i></div>
                     </div>
                 </div>
                 <div class="hdItem4 d-flex">
@@ -71,7 +73,6 @@
                     <img src="img/hd6.png" >
                 </div>
                 <div class="hdItem5"><img src="img/hd7.png" alt=""></div>
-            </div>
         </header>
         <main>
             <div class="ctn">
@@ -80,7 +81,6 @@
                     <div class="ctn-title">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis <br/> ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. </p>
                     </div>
-                    <div class="row">
                         <div class="ctnParent2">
                             <img class="ctnItem1" src="img/c4.png" width="100%">
                             <div class="ctnParent row ">
@@ -116,7 +116,6 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
                 </div>
             </div>
             <div class="ag-slide-block my-5 mx-4 mx-lg-0">
@@ -170,43 +169,42 @@
                 </div>
             </div>
         </main>
-        <footer class="footer">
-            <div class="ft-pr">
-                <img src="img/ft1.png" width="100%" height="500px">
-                <div class="ftHeader">
-                    <img class="my-5 ms-5" src="img/ft2.png" alt="">
+    <footer class="footer">
+        <div class="ft-pr">
+            <div class="ftHeader">
+                <img class="my-5 ms-5" src="img/ft2.png" alt="">
+            </div>
+            <div class="ftContainer d-flex justify-content-center">
+                <div class="ft-left justify-content-start w-50">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viver ra maecenas accumsan lacus vel facilisis.
+                    </p>
                 </div>
-                <div class="ftContainer d-flex justify-content-center">
-                    <div class="ft-left justify-content-start w-50">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viver ra maecenas accumsan lacus vel facilisis.
-                        </p>
+                <div class="ft-right justify-content-end">
+                    <div class="ft-item mb-3">
+                        <img src="img/ft3.png" alt="">
+                        <span class="ms-3">Main Road, Building Name, Country</span>
                     </div>
-                    <div class="ft-right justify-content-end">
-                        <div class="ft-item mb-3">
-                            <img src="img/ft3.png" alt="">
-                            <span class="ms-3">Main Road, Building Name, Country</span>
-                        </div>
-                        <div class="ft-item2 mt-3">
-                            <img src="img/ft4.png" alt="">
-                            <span class="ms-3">info@companyname.com</span>
-                        </div>
+                    <div class="ft-item2 mt-3">
+                        <img src="img/ft4.png" alt="">
+                        <span class="ms-3">info@companyname.com</span>
                     </div>
                 </div>
-                <div class="ft-mxh d-flex justify-content-center ">
-                    <div class="ftItem text-align-center">
-                        <span class="mxhTitle">© Company Name 2020. All rights reserved.</span>
-                    </div>
-                    <div class="d-flex justify-content-end ftMxh">
-                        <a class="mx-1" href="#"><img src="img/ftinsta.png" alt=""></a>
-                        <a class="mx-1" href="#"><img src="img/ftfb.png" alt=""></a>
-                        <a class="mx-1" href="#"><img src="img/fttw.png" alt=""></a>
-                        <a class="mx-1" href="#"><img src="img/ftwa.png" alt=""></a>
-                    </div>
+            </div>
+            <div class="ft-mxh d-flex justify-content-center ">
+                <div class="ftItem text-align-center">
+                    <span class="mxhTitle">© Company Name 2020. All rights reserved.</span>
+                </div>
+                <div class="d-flex justify-content-end ftMxh">
+                    <a class="mx-1" href="#"><img src="img/ftinsta.png" alt=""></a>
+                    <a class="mx-1" href="#"><img src="img/ftfb.png" alt=""></a>
+                    <a class="mx-1" href="#"><img src="img/fttw.png" alt=""></a>
+                    <a class="mx-1" href="#"><img src="img/ftwa.png" alt=""></a>
                 </div>
             </div>
         </div>
     </footer>
-
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <!-- Initialize Swiper -->
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.1.0/js/swiper.min.js'></script>
