--- a/floral/html/floral.html
+++ b/floral/html/floral.html
@@ -21,7 +21,7 @@
                     <div class="col-xl-3 col-lg-3 col-md-3 flower-logo">
                         <img src="/floral/img_and_fonts/image/flower_logo.png" alt="">
                     </div>
-                    <div class="col-xl-6 col-lg-7 col-md-8 nav-bar">
+                    <div class="col-xl-6 col-lg-7 col-md-7 nav-bar">
                         <ul class="nav-bar-list">
                             <li><a href="">Home</a></li>
                             <li><a href="">Services</a></li>
@@ -30,7 +30,7 @@
                             <li> <div class="sign_in"><a href="">Sign In</a></div></li>
                         </ul>
                     </div>
-                    <div class="col-xl-3 col-lg-2 col-md-1 user-icon">
+                    <div class="col-xl-3 col-lg-2 col-md-2 user-icon">
                         <div class="icon-user">
                             <i class="fa-solid fa-user"></i>
                         </div>
@@ -42,7 +42,7 @@
         </div>
         <div class="container-fluid flower-arr-container">
             <div class="row flower-arrange-banner">
-                <div class="col-left col-xl-6 col-lg-6">
+                <div class="col-left col-lg-6">
                     <div class="decor-leaf-flower">
                         <img src="/floral/img_and_fonts/image/Leafs2.png" alt="">
                     </div>
@@ -55,17 +55,29 @@
                         <img src="/floral/img_and_fonts/image/Leafs1.png" alt="">
                     </div>
                 </div>
-                <div class="col-right col-xl-6 col-lg-6">
+                <div class="col-right col-lg-6">
                     <img src="/floral/img_and_fonts/image/lady.png" alt="">
                 </div>
             </div>
         </div>
         <div class="container-fluid-sales container-fluid">
             <div class="sales row">
-                <div class="number-run package-sold col-xl-3 col-lg-3"><h3 class="package-sold-number">3000</h3></div>
-                <div class="number-run bouquet-sold col-xl-3 col-lg-3"> <h3 class="bouquet-sold-number">5000</h3></div>
-                <div class="number-run happy-clients col-xl-3 col-lg-3"> <h3 class="happy-clients-number">7000</h3></div>
-                <div class="number-run year-of-exp col-xl-3 col-lg-3"> <h3 class="year-of-exp-number">10</h3></div>
+                <div class="number-run package-sold-number col-xl-3 col-lg-3">
+                    <h3 id="package-sold-number">3000</h3>
+                    <h4>Packages Sold</h4>
+                </div>
+                <div class="number-run bouquet-sold col-xl-3 col-lg-3"> 
+                    <h3 id="bouquet-sold-number">5000</h3>
+                    <h4>Bouquet Sold</h4>
+                </div>
+                <div class="number-run happy-clients col-xl-3 col-lg-3">
+                     <h3 id="happy-clients-number">7000</h3>
+                     <h4>Happy Clients</h4>
+                    </div>
+                <div class="number-run year-of-exp col-xl-3 col-lg-3">
+                     <h3 id="year-of-exp-number">10</h3>
+                     <h4>Years of Experience</h4>
+                    </div>
             </div>
         </div>
         <div class="our-top-product-content">
@@ -93,5 +105,6 @@
 
         </div>
     </div>
+    <script src="/js/number_run.js"></script>
 </body>
 </html>
