--- a/floral/html/floral.html
+++ b/floral/html/floral.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/floral/css/floral.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab&family=Montserrat+Alternates:wght@600&family=Montserrat:wght@800&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab&family=Montserrat+Alternates:wght@500;600;900&family=Montserrat:wght@800&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/floral/img_and_fonts/font/fontawesome-free-6.1.1/css/all.min.css">
     <link rel="stylesheet" href="/img_and_fonts/fonts/themify-icons/themify-icons.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.min.css" 
@@ -64,7 +64,7 @@
                         <div class="read-more-flower-arr-btn"> <a href=""> Read More </a></div>
                     </div>
                     <div class="decor-leaf-flower-bottom-left">
-                        <img src="/floral/img_and_fonts/image/Leafs1.png" alt="">
+                        <img src="/floral/img_and_fonts/image/Leafs1.png" class="img-fluid" alt="">
                     </div>
                 </div>
                 <div class="col-right col-lg-6">
@@ -179,15 +179,69 @@
             </div>
         </div>
         <div class="how-we-do-it-content">
+            <div class="leaf-left-how-we-do-it"><img src="/floral/img_and_fonts/image/leaf_how_we_do_it_1.png" alt=""></div>
             <h2>How We Do it</h2>
             <h4>Lorem ipsum dolor sit amet, consectetur</h4>
-            <div class="video-how-we-do-it">
-                <video src="/floral/img_and_fonts/image/Handtied_and_Wrapping.mp4" controls autoplay></video>                
+                <div class="video-how-we-do-it">
+                    <div class="box-brown-decor-top-how-we-do-it"></div>
+                    <video src="/floral/img_and_fonts/image/Handtied_and_Wrapping.mp4" controls></video>    
+                    <div class="box-decor-bottom-how-we-do-it"></div>            
+                </div>
+                <div class="left-right-how-we-do-it"><img src="/floral/img_and_fonts/image/leaf_how_we_do_it_2.png" alt=""></div>
+        </div>
+            <div class="row special-sale-off">
+                <div class="col-lg-6 col-md-12 col-sm-12 offer-col-left">
+                    <div class="spec-offer-btn"><a href="">Special Offer</a> </div>
+                    <h2>20%</h2>
+                    <h3>Discount on your <br> first purchase</h3>
+                </div>
+                <div class="col-lg-6 col-md-12 col-sm-12 image-offer-col-right container-fluid">
+                    <img src="/floral/img_and_fonts/image/image_special_offer.png" alt="">
+                </div>
+            </div>
+        <div class="row intro-product-best-flower">
+            <div class="image-best-flower-col-left col-lg-7 col-md-7">
+                <div class="box-pink-top-best-flower"></div>
+                <img src="/floral/img_and_fonts/image/flower_best_flower.png" alt="">
+                <div class="box-brown-bottom-best-flower"></div>
+            </div>
+            <div class="heading-best-flower-col-right col-lg-5 col-md-5">
+                <div class="text-best-flower">
+                    <div class="image-leaf-best-flower">
+                        <img src="/floral/img_and_fonts/image/leaf_best_flower.png" alt="">
+                    </div>
+                    <h2>We select the best flowers</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
+                    <div class="more-btn">
+                        <button class="read-more-btn">Read More</button>
+                    </div>
+                </div>
+            </div>
+            <div class="leaf-decor-best-flower-bottom">
+                <img src="/floral/img_and_fonts/image/leaf_best_flower_2.png" alt="">
             </div>
         </div>
-        <div class="special-sale-off"></div>
-        <div class="intro-product-best-flower"></div>
-        <div class="intro-take-care-details"></div>
+        <div class="row intro-take-care-details">
+            <div class="heading-take-care-detail col-lg-6 col-md-6">
+                <div class="text-take-care-detail">
+                    <div class="image-leaf-best-flower">
+                        <img src="/floral/img_and_fonts/image/leaf_best_flower.png" alt="">
+                    </div>
+                    <div class="container-text-takecare-detail">
+                        <h2>We take care of the details</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
+                    </div>
+                    <div class="more-btn">
+                        <button class="read-more-btn">Read More</button>
+                    </div>
+                </div>
+            </div>
+            <div class="image-take-care-detail col-lg-6 col-md-6">
+                <div class="box-pink-take-care-detail"></div>
+                <img src="/floral/img_and_fonts/image/take_care_details.png" alt="">
+                <div class="box-brown-take-care-detail"></div>
+            </div>
+        </div>
         <div class="intro-love-what-we-do"></div>
         <div class="form-subcribe"></div>
         <div class="footer"></div>
