--- a/floral/html/floral.html
+++ b/floral/html/floral.html
@@ -184,7 +184,7 @@
             <h4>Lorem ipsum dolor sit amet, consectetur</h4>
                 <div class="video-how-we-do-it">
                     <div class="box-brown-decor-top-how-we-do-it"></div>
-                    <video src="/floral/img_and_fonts/image/Handtied_and_Wrapping.mp4" controls></video>    
+                    <video src="/floral/img_and_fonts/image/Asymmetric flower arrangement.mp4" controls></video>  
                     <div class="box-decor-bottom-how-we-do-it"></div>            
                 </div>
                 <div class="left-right-how-we-do-it"><img src="/floral/img_and_fonts/image/leaf_how_we_do_it_2.png" alt=""></div>
